Testing changes in separate copies

--- a/landing_page/styles copy.css
+++ b/landing_page/styles copy.css
@@ -1,62 +1,72 @@
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: center; */
     /* width: 100%; */
     /* height: 100%; */
-    /* flex-grow: 1; */
+    /* flex: 1; */
     /* justify-content: stretch; */
     margin: 0;
     font-family: Roboto;
+    /* min-height: 500vh; */
+    /* overflow: hidden; */
 }
 
 ul {
     display: flex;
     list-style: none;
     margin: 0;
+    /* padding: 0; */
     gap: 25px;
-    /* justify-content: flex-end; */
+    /* justify-content: space-around; */
     /* flex: 1; */
 }
 
-.header, .footer {
+.head {
     display: flex;
-    /* flex: 1; */
-    background-color: #1f2937;
-    /* flex-direction: column; */
-    width: 100%;
-    min-height: 75px;
     align-items: center;
-    /* justify-content: space-between; */
-    padding: 10px;
-    /* height: 30px; */
+    /* padding: 20px 0px; */
+    min-height: 5vh;
+    background-color: #1f2937;
+
 }
 
-/* .header-content {
+.container1 {
     display: flex;
-    width: 70%;
-    /* justify-content: space-between;
-} */
+    flex: 1 1 auto;
+    min-height: calc(100vh - 77.5vh);
+    flex-direction: column;
+    width: 100%;
+    /* height: 100%; */
+    background-color: #1f2937;
+    justify-content: center;
+    /* align-items: stretch; */
+    /* padding: 50px; */
+    color: white;
+}
 
 .logo {
     /* margin-right: auto; */
-    width: 50%;
+    /* width: 50%; */
     color: #f9faf8;
     font-size: 24px;
-    margin-left: 0%;
-    /* margin-right: auto; */
-    justify-content: flex-start;
+    margin-left: 15%;
+    /* margin-right: 0; */
+    /* padding-right: 0; */
+    /* justify-content: flex-start; */
     font-weight: bold;
+    /* align-items: center; */
     /* flex: 1 */
 }
 
 .menu_items {
     /* display: flex; */
-    /* margin-left: auto; */
+    margin-left: auto;
     margin-right: 15%;
-    /* justify-content: flex-end; */
+    /* align-items: center; */
+    /* justify-content: space-between; */
     /* flex-wrap: wrap; */
-    width: 50%;
+    /* width: 50%; */
     /* flex: 1 */
 }
 
@@ -66,15 +76,12 @@ ul {
     font-weight: 300;
 }
 
-.container1 {
+.cat-1 {
     display: flex;
-    flex-grow: 1;
-    width: 100%;
-    background-color: #1f2937;
-    justify-content: space-around;
-    align-items: center;
-    padding: 50px;
-    color: white;
+    /* padding: 50px 0; */
+    /* flex: 1; */
+    /* justify-content: stretch; */
+    /* align-items: stretch; */
 }
 
 .hero {
@@ -85,7 +92,7 @@ ul {
 .text1 {
     margin-left: 15%;
     margin-right: 10px;
-    flex: 1;
+    /* flex: 1; */
 }
 
 .sign_up {
@@ -99,10 +106,11 @@ ul {
 }
 
 .image {
-    flex: 1;
-    align-items: flex-end;
+    /* flex: 1; */
+    /* align-items: stretch; */
+    /* justify-content: stretch; */
     margin-right: 15%;
-    margin-left: 10px;
+    margin-left: auto;
     width: 600px;
     height: 200px;
     background-color: lightgray;
@@ -111,12 +119,13 @@ ul {
 .container2 {
     display: flex;
     padding: 0;
-    /* justify-content: space-evenly; */
+    justify-content: center;
     flex: 1;
     align-items: center;
     flex-direction: column;
     width: 100%;
-    padding: 35px;
+    /* padding: 55px 0px; */
+    min-height: calc(100vh - 77.5vh);
 }
 
 .heading2 {
@@ -168,12 +177,15 @@ ul {
     background-color: #e5e7eb;
     align-items: center;
     justify-content: center;
-    padding: 35px;
+    /* padding: 55px 0px; */
+    min-height: calc(100vh - 77.5vh);
+
 }
 
 .quote {
     font-size: 36px;
-    font-weight: italic;
+    font-weight: 300;
+    font-style: italic;
     color: #1f2937;
     width: 70%;
 }
@@ -190,9 +202,12 @@ ul {
     display: flex;
     flex: 1;
     width: 100%;
+    flex-flow: column;
     justify-content: center;
     align-items: center;
-    padding: 35px;
+    /* padding: 55px 0px; */
+    min-height: calc(100vh - 77.5vh);
+
 }
 
 .cta {
@@ -243,9 +258,19 @@ ul {
 }
 
 .footer {
-    /* display: flex; */
+    display: flex;
     align-items: center;
-    /* flex: 1; */
+    flex: 0 1 auto;
     justify-content: center;
     /* flex-direction: column; */
+    display: flex;
+    flex: 1;
+    background-color: #1f2937;
+    flex-direction: column;
+    width: 100%;
+    min-height: 5vh;
+    /* align-items: center; */
+    /* justify-content: space-between; */
+    /* padding: 20px 0px; */
+    /* height: 30px; */
 }
