--- a/etch-sketch/styles.css
+++ b/etch-sketch/styles.css
@@ -33,6 +33,7 @@ body {
     /* text-align: center; */
     /* justify-content: space-around; */
     /* align-items: center; */
+    background-color: white;
     border: black 1px solid;
     min-width: 30px;
     min-height: 30px;
