--- a/etch-sketch/styles.css
+++ b/etch-sketch/styles.css
@@ -1,6 +1,6 @@
-/* body {
-    margin: auto;
-} */
+body {
+    text-align: center;
+}
 
 .main_container {
     display: flex;
@@ -20,6 +20,8 @@
     flex: 1;
     background-color: white;
     border: black 1px solid;
-    min-width: 30px;
-    min-height: 30px;
+}
+
+#size {
+    margin: 50px;
 }
