--- a/calculator/styles.css
+++ b/calculator/styles.css
@@ -26,6 +26,7 @@ body {
     font-size: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 15px;
+    margin: auto;
 }
 
 #inputContainer {
