--- a/css/admin_dashboard/styles.css
+++ b/css/admin_dashboard/styles.css
@@ -2,8 +2,8 @@
 
 @font-face {
     font-family: 'robotobold';
-    src: url('roboto-bold-webfont.woff2') format('woff2'),
-         url('roboto-bold-webfont.woff') format('woff');
+    src: url('./fonts/webfontkit-20241210-203210/roboto-bold-webfont.woff2') format('woff2'),
+         url('./fonts/webfontkit-20241210-203210/roboto-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -11,8 +11,8 @@
 
 @font-face {
     font-family: 'robotoitalic';
-    src: url('roboto-italic-webfont.woff2') format('woff2'),
-         url('roboto-italic-webfont.woff') format('woff');
+    src: url('./fonts/webfontkit-20241210-203210/roboto-italic-webfont.woff2') format('woff2'),
+         url('./fonts/webfontkit-20241210-203210/roboto-italic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -20,8 +20,8 @@
 
 @font-face {
     font-family: 'robotoregular';
-    src: url('roboto-regular-webfont.woff2') format('woff2'),
-         url('roboto-regular-webfont.woff') format('woff');
+    src: url('./fonts/webfontkit-20241210-203210/roboto-regular-webfont.woff2') format('woff2'),
+         url('./fonts/webfontkit-20241210-203210/roboto-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -29,14 +29,16 @@
 
 body {
     font-family: "robotoregular";
-    /* width: 100%; */
     margin: 0;
+}
+
+li {
+    list-style-type: none;
 }
 
 .container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    width: 100%;
+    grid-template-columns: repeat(5, 1fr);
 }
 
 .header {
@@ -46,6 +48,47 @@ body {
 
 .sidebar {
     display: grid;
-    grid-template-rows: repeat;
-    grid-auto-flow: row;
+    grid-template-columns: 1fr 3fr;
+    grid-auto-flow: column;
+    grid-column: 1 / 2;
+    align-content: start;
+    gap: 15px;
+    padding: 25px 25px 0 25px;
+    background-color: #0ea5e9;
+    color: white;
+    font-family: "robotobold";
+    height: 100vh;
+    width: 20vw;
+}
+
+.sidebar > * {
+    margin: 0
+}
+
+.sidebar > svg {
+    justify-self: center;
+    grid-column: 1 / 2;
+    height: 25px;
+    fill: white;
+}
+
+.sidebar > p {
+    grid-column: 2 / 3;
+    align-self: center;
+}
+
+#gap1 {
+    grid-area: 2 / 1 / 4 / 3;
+}
+
+#gap2 {
+    grid-area: 10 / 1 / 12 / 3;
+}
+
+.sidebar > .logo {
+    height: 50px;
+}
+
+#dash {
+    font-size: 25px;
 }
