--- a/css/admin_dashboard/styles.css
+++ b/css/admin_dashboard/styles.css
@@ -43,14 +43,55 @@ li {
 
 .header {
     display: grid;
-    grid-template: 1fr 1fr / 2fr 1fr;
+    /* grid-auto-flow: column; */
+    grid-template-rows: 50px 50px;
+    grid-area: 1 / 2 / 2 / 6;
+    align-items: center;
+    justify-items: end;
+    padding-top: 25px;
+    /* max-height: 20%; */
+}
+
+.row1 {
+    grid-row: 1 / 2;
+}
+
+.row2 {
+    grid-row: 2 / 3;
+    /* grid-column: 1 / 5; */
+}
+
+.search {
+    grid-column: span 3;
+    height: 25px;
+    width: 90%;
+    margin-left: 15px;
+    justify-self: start;
+    border-radius: 50px;
+    border-style: none;
+    background-color: rgba(31 169 196 / 0.17);
+}
+
+.profile-name {
+    justify-self: start;
+    font-family: "robotobold";
+}
+
+.header > svg {
+    height: 25px;
+}
+
+.profile-icon {
+    border-radius: 100%;
+    height: 50px;
+    justify-self: center;
 }
 
 .sidebar {
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-auto-flow: column;
-    grid-column: 1 / 2;
+    grid-area: 1 / 1 / 3 / 2;
     align-content: start;
     gap: 15px;
     padding: 25px 25px 0 25px;
@@ -85,10 +126,28 @@ li {
     grid-area: 10 / 1 / 12 / 3;
 }
 
+#gap3 {
+    grid-area: 2 / 3 / 3 / 5;
+}
+
 .sidebar > .logo {
     height: 50px;
 }
 
 #dash {
     font-size: 25px;
+}
+
+.content {
+    grid-area: 2 / 2 / 3 / 6;
+    background-color: rgba(31 169 196 / 0.17);
+}
+
+.profile-icon + .row2 {
+    grid-row: 2 / 4;
+}
+
+#name {
+    font-size: 20px;
+    font-weight: bold;
 }
