--- a/css/admin_dashboard/styles.css
+++ b/css/admin_dashboard/styles.css
@@ -27,6 +27,10 @@
 
 }
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: "robotoregular";
     margin: 0;
@@ -39,26 +43,28 @@ li {
 .container {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 20vh);
 }
 
-.header {
+/* .header {
     display: grid;
-    /* grid-auto-flow: column; */
     grid-template-rows: 50px 50px;
     grid-area: 1 / 2 / 2 / 6;
     align-items: center;
     justify-items: end;
     padding-top: 25px;
-    /* max-height: 20%; */
-}
+} */
 
-.row1 {
+/* .row1 {
     grid-row: 1 / 2;
 }
 
 .row2 {
     grid-row: 2 / 3;
-    /* grid-column: 1 / 5; */
+} */
+
+.header {
+    grid-area: 1 / 2 / 2 / 6;
 }
 
 .search {
@@ -77,7 +83,7 @@ li {
     font-family: "robotobold";
 }
 
-.header > svg {
+.head-div > svg {
     height: 25px;
 }
 
@@ -127,7 +133,7 @@ li {
 }
 
 #gap3 {
-    grid-area: 2 / 3 / 3 / 5;
+    /* grid-area: 2 / 3 / 3 / 5; */
 }
 
 .sidebar > .logo {
@@ -139,15 +145,30 @@ li {
 }
 
 .content {
-    grid-area: 2 / 2 / 3 / 6;
+    grid-area: 2 / 2 / 6 / 6;
     background-color: rgba(31 169 196 / 0.17);
 }
 
-.profile-icon + .row2 {
-    grid-row: 2 / 4;
+.head-div {
+    display: grid;
+    grid-auto-flow: column;
+    align-items: center;
+    justify-items: end;
+}
+
+.profile-icon.row2 {
+    /* grid-row: 2 / 4; */
+    height: 75px;
+    justify-self: end;
+    padding-right: 25px;
 }
 
 #name {
     font-size: 20px;
     font-weight: bold;
+    /* justify-self: start; */
+}
+
+.greeting {
+    justify-self: start;
 }
