Structure of side-content complete. Finalizing layout and adding design.

--- a/css/admin_dashboard/styles.css
+++ b/css/admin_dashboard/styles.css
@@ -187,20 +187,21 @@ li {
     display: grid;
     grid-template-rows: 50px repeat(3, 2fr);
     /* grid-template-columns: 50% 50%; */
-    justify-content: start;
+    justify-content: center;
     align-content: start;
-    height: 100%;
-    width: 100%;
-    padding: 25px;
+    /* height: 100%;
+    width: 100%; */
+    padding: 25px 25px 75px 25px;
     column-gap: 15px;
     row-gap: 25px;
+    /* row-gap; */
 }
 
 .card {
     display: grid;
     grid-template-rows: 30px 2fr;
     background-color: white;
-    padding: 25px 25px;
+    padding: 25px;
     border-left: 5px gold solid;
     border-radius: 5px;
     /* min-height: 175px; */
@@ -224,6 +225,13 @@ li {
 }
 
 .side-content {
+    display: grid;
+    grid-template-rows: 1fr 6fr 1fr 6fr;
+    /* justify-content: center; */
+    /* align-content: start; */
+    padding: 25px 25px 75px 25px;
+    column-gap: 15px;
+    row-gap: 25px;
     width: 100%;
     height: 100%;
     background-color: red;
@@ -240,4 +248,15 @@ li {
     margin-top: 10px;
     height: 25px;
     /* align-self: end; */
+}
+
+.side-content > h3 {
+    align-self: end;
+    justify-self: start;
+}
+
+.announcements, .trending {
+    background-color: white;
+    border-radius: 5px;
+    padding: 25px;
 }
